Fixed validation and split entitymapping from link mapping